# repo-index-mcp

./: .gitignore  README.md  SECURITY.md  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: PRD-codebase-index-mcp.md  PRD-codescry.md  SEDD-20260626-codescry.md  SEDD-20260626-repo-index-mcp.md  cli-reference.md  evals.md  getting-started.md  language-support.md  mcp-clients.md  output-schema.md  phase-0-baseline.md  phase-2-fresh-multi-repo.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  pilot.md  recipes.md  release.md  troubleshooting.md  upgrade-uninstall.md
evals/: golden.codescry.jsonl
scripts/: install.sh
src/repo_index_mcp/: __init__.py  __main__.py  chunking.py  cli.py  doctor.py  embeddings.py  engine.py  eval.py  hooks.py  mcp_server.py  models.py  parsers.py  repo.py  secrets.py  storage.py  usage.py
tests/: test_chunking.py  test_cli.py  test_embeddings.py  test_engine.py  test_eval.py  test_hooks.py  test_npm_wrapper.py  test_phase3_quality.py  test_repo.py  test_storage.py  test_tree_sitter_parsers.py  test_vector_candidates.py
