[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "repo-index-mcp"
version = "0.1.0"
description = "Local codebase index with MCP retrieval tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.9.0",
]
authors = [{ name = "Zhachory Volker" }]
license = { text = "MIT" }

[project.scripts]
repo-index = "repo_index_mcp.cli:main"
repo-index-mcp = "repo_index_mcp.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
