[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codescry"
version = "0.2.4"
description = "CodeScry local codebase index with MCP retrieval tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mcp>=1.9.0",
  "sqlite-vec>=0.1.6",
  "tree-sitter-language-pack>=1.11.0",
]
authors = [{ name = "Zhachory Volker" }]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/Zhachory1/codescry"
Repository = "https://github.com/Zhachory1/codescry"
Issues = "https://github.com/Zhachory1/codescry/issues"

[project.scripts]
codescry = "repo_index_mcp.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/repo_index_mcp"]

[tool.hatch.build.targets.sdist]
exclude = ["/assets"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
